--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #f9f9f9;
+  
   }
   
   .title {
@@ -42,18 +42,18 @@
   }
 
   .invoice-table tr {
-    margin-bottom: 15px;
-    border: 1px solid #ccc; /* Add border similar to AddressModal */
-    border-radius: 8px; /* Add border radius similar to AddressModal */
-    padding: 10px; /* Add padding similar to AddressModal */
-    background-color: #f9f9f9; /* Add background color similar to AddressModal */
+    /* margin-bottom: 15px;
+    border: 1px solid #ccc; 
+    border-radius: 8px; 
+    padding: 2px; */
+ 
   }
   .common-td {
     border: 1px solid #3f3d3d;
     padding: 0.5rem;
   }
 
-  
+
   @media (max-width: 768px) {
     .invoice-table thead {
       display: none;
